--- a/index.html
+++ b/index.html
@@ -378,6 +378,100 @@
                 </div>
             </div>
         </section>
+
+        <section class="quick-access">
+            <div class="quick-access-grid">
+                <div class="quick-access-div">
+                    <div class="img-div">
+                        <img src="image/Book (1) 1.jpg" alt="look no further">
+                    </div>
+                    <div class="quick-access-inner-div">
+                        <h2>Look No futher</h2>
+                        <p>Search all travel deals, in one go</p>
+                    </div>
+                </div>
+                <div class="quick-access-div">
+                    <div class="img-div">
+                        <img src="image/Book (1) 2.jpg" alt="look no further">
+                    </div>
+                    <div class="quick-access-inner-div">
+                        <h2>Reliable Shopping</h2>
+                        <p>No hidden Charges or Taxes</p>
+                    </div>
+                </div>
+                <div class="quick-access-div">
+                    <div class="img-div">
+                        <img src="image/Book (1) 4.jpg" alt="look no further">
+                    </div>
+                    <div class="quick-access-inner-div">
+                        <h2>Easy Payment</h2>
+                        <p>We support all  payment methods</p>
+                    </div>
+                </div>
+                <div class="quick-access-div">
+                    <div class="img-div">
+                        <img src="image/Book (1) 3.jpg" alt="look no further">
+                    </div>
+                    <div class="quick-access-inner-div">
+                        <h2>Instant Booking</h2>
+                        <p>booking with just few clicks</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="quick-access-2">
+            <div>
+                <div class="quick-access-flex-div">
+                    <h2>Flights To Top Cities from Nigeria</h2>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="Chevron up">
+                        <path id="Icon" d="M12 10L8 6L4 10" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                    </svg>
+                </div>
+                 <main>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                 </main>
+            </div>
+            <div>
+                <div class="quick-access-flex-div">
+                    <h2>Top International Destinations</h2>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                 <!-- <main>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                 </main> -->
+            </div>
+            <div>
+                <div class="quick-access-flex-div">
+                    <h2>Flights To Top Countries</h2>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                 <!-- <main>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                    <p>Flights to Abuja</p>
+                 </main> -->
+            </div>
+        </section>
     </main>
 
     <!-- swiper cdn -->
