--- a/index.html
+++ b/index.html
@@ -472,6 +472,39 @@
                  </main> -->
             </div>
         </section>
+
+        <footer>
+            <img src="image/20241028_211741 1.png" alt="900 logo">
+            <h2>We are 900Ticket, a B2B booking company specializing in travel and entertainment reservations for businesses and organizations. </h2>
+            <main>
+                <div>
+                    <h3>Company</h3>
+                    <p>about 900 ticket</p>
+                    <p>contact us</p>
+                    <p>900 tiket affiliate</p>
+                    <p>refer a customer</p>
+                    <p>blog</p>
+                </div>
+                <div>
+                    <h3>Useful Links</h3>
+                    <p>privacy and policy</p>
+                    <p>terms and condition</p>
+                    <p>fligh schedules</p>
+                    <p>advertise with us</p>
+                    <p>hotlines</p>
+                </div>
+            </main>
+            <h2>CONNECT WITH US</h2>
+            <main>
+                <img src="image/Book (2) 1.png" alt="instagram">
+                <img src="image/Book (2) 2.png" alt="facebook">
+                <img src="image/Book (2) 3.png" alt="x">
+                <img src="image/Book (2) 4.png" alt="lindkin">
+                <img src="image/Book (2) 5.png" alt="you tube">
+            </main>
+
+            <h1>© 2024 900Ticket Ltd</h1>
+        </footer>
     </main>
 
     <!-- swiper cdn -->
