--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <section id="side-bar">
             <main class="main-side-bar">
-                <svg class="icon-cancle"  width="83" height="24"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <svg class="icon-cancle" id="hide-side-bar" width="83" height="24"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                   </svg>
                   <div class="side-bar-first-section">
@@ -588,8 +588,8 @@
     </main>
 
     <!-- swiper cdn -->
+    <script src="script/toogles.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script/swiper.js"></script>
-    <script src="script/toogles.js"></script>
 </body>
 </html>
