--- a/index.html
+++ b/index.html
@@ -503,14 +503,19 @@
         <section class="quick-access-2">
             <div>
                 <div class="quick-access-flex-div">
-                    <h2>Flights To Top Cities from Nigeria</h2>
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="Chevron up">
-                        <path id="Icon" d="M12 10L8 6L4 10" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </g>
-                    </svg>
+                    <h2 id="flight-from-nigeria-btn">Flights To Top Cities from Nigeria</h2>
+                    <div>
+                        <svg width="16" height="16" id="flight-from-nigeria-icon-up" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Chevron up">
+                            <path id="Icon" d="M12 10L8 6L4 10" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                        <svg width="16" height="16"  id="flight-from-nigeria-icon-down" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                 </div>
-                 <main>
+                 <main id="flight-from-nigeria">
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
@@ -521,35 +526,49 @@
             </div>
             <div>
                 <div class="quick-access-flex-div">
-                    <h2>Top International Destinations</h2>
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                    <h2 id="international-destination-btn">Top International Destinations</h2>
+                    <div>
+                        <svg width="16" height="16" id="international-destination-icon-up" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Chevron up">
+                            <path id="Icon" d="M12 10L8 6L4 10" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                        <svg width="16" height="16"  id="international-destination-icon-down" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                 </div>
-                 <!-- <main>
+                 <main id="international-destination">
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
-                 </main> -->
+                 </main>
             </div>
             <div>
                 <div class="quick-access-flex-div">
-                    <h2>Flights To Top Countries</h2>
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                    <h2 id="flight-to-country-btn">Flights To Top Countries</h2>
+                    <div>
+                        <svg width="16" height="16" id="flight-to-country-icon-up" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Chevron up">
+                            <path id="Icon" d="M12 10L8 6L4 10" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                        <svg width="16" height="16"  id="flight-to-country-icon-down" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4 6L8 10L12 6" stroke="#1E1E1E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                 </div>
-                 <!-- <main>
+                 <main id="flight-to-country">
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
                     <p>Flights to Abuja</p>
-                 </main> -->
+                 </main>
             </div>
         </section>
 
