--- a/html/region-language.html
+++ b/html/region-language.html
@@ -23,8 +23,8 @@
             <h1>Preferences</h1>
     
             <div>
-                <h3 id="link-style-1"><a id="region-language" href="#">Region and Language</a></h3>
-                <h3  id="link-style-2"><a id="currency" href="">currency</a></h3>
+                <h3 id="link-style-1"><a id="region-language-inner" href="#">Region and Language</a></h3>
+                <h3  id="link-style-2"><a id="currency-inner" href="">currency</a></h3>
             </div>
     
             <h2>Choose a region and language</h2>
