--- a/html/roundTrip.html
+++ b/html/roundTrip.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-                <div class="flight-take-off">
+                <!-- <div class="flight-take-off">
                     <label for="select date">select date</label>
                     <div>
                         <svg class="date-icon" xmlns="http://www.w3.org/2000/svg" fill="none" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -59,8 +59,29 @@
                           </svg>
                           <input type="text" placeholder="select trip date">
                     </div>
-                </div>
+                </div> -->
                 
+                <section class="flight-div-grid">
+                    <div class="flight-take-off">
+                        <label for="travelers">select date</label>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 18 18" fill="none">
+                                <path d="M9 9C10.6575 9 12 7.6575 12 6C12 4.3425 10.6575 3 9 3C7.3425 3 6 4.3425 6 6C6 7.6575 7.3425 9 9 9ZM9 10.5C6.9975 10.5 3 11.505 3 13.5V15H15V13.5C15 11.505 11.0025 10.5 9 10.5Z" fill="#B61C1C"/>
+                              </svg>
+                              <input type="text" placeholder="Select trip date">
+                        </div>
+                    </div>
+                    <div class="flight-take-off">
+                    <label class="none-labal" for="travelers">select date</label>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 19 18" fill="none">
+                                <path d="M12.875 2.625H11.375C10.55 2.625 9.875 3.3 9.875 4.125V7.875C9.875 8.7 10.55 9.375 11.375 9.375H12.875C13.7 9.375 14.375 8.7 14.375 7.875V4.125C14.375 3.3 13.7 2.625 12.875 2.625ZM8 11.625H14.375V13.125H7.9925C7.3325 13.125 6.7475 12.69 6.5525 12.0525L4.625 5.625V2.625H6.125V5.625L8 11.625ZM6.875 13.875H14.375V15.375H6.875V13.875Z" fill="#B61C1C"/>
+                              </svg>
+                              <input type="text" placeholder="Return date">
+                        </div>
+                    </div>
+                </section>
+
                 <section class="flight-div-grid">
                     <div class="flight-take-off">
                         <label for="travelers">travelers</label>
@@ -86,7 +107,7 @@
             <button class="flight-button">search flights</button>
         </section>
 
-        <section class="notification-section">
+        <!-- <section class="notification-section">
             <div>
                 <h1>continue your search</h1>
                 <a href="#">clear all</a>
@@ -112,7 +133,7 @@
                 </div>
                 <h3>nov 5</h3>
             </main>
-        </section>
+        </section> -->
     </main>
 
     <script src="../script/routes.js"></script>
