--- a/html/flight.html
+++ b/html/flight.html
@@ -68,21 +68,21 @@
                 
                 <section class="flight-div-grid">
                     <div class="flight-take-off">
-                        <label for="travelers">travelers</label>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 18 18" fill="none">
+                        <label for="travelers" class="under-side-bar-link1">travelers</label>
+                        <div class="under-side-bar-link1">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="under-side-bar-link1" width="20" height="20" viewBox="0 0 18 18" fill="none">
                                 <path d="M9 9C10.6575 9 12 7.6575 12 6C12 4.3425 10.6575 3 9 3C7.3425 3 6 4.3425 6 6C6 7.6575 7.3425 9 9 9ZM9 10.5C6.9975 10.5 3 11.505 3 13.5V15H15V13.5C15 11.505 11.0025 10.5 9 10.5Z" fill="#B61C1C"/>
                               </svg>
-                              <input type="text" placeholder="passenger">
+                              <input type="text" class="under-side-bar-link1" placeholder="passenger">
                         </div>
                     </div>
                     <div class="flight-take-off">
-                        <label for="preferred class">preferred class</label>
+                        <label for="preferred class" class="under-side-bar-link1" >preferred class</label>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 19 18" fill="none">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="under-side-bar-link1" width="21" height="20" viewBox="0 0 19 18" fill="none">
                                 <path d="M12.875 2.625H11.375C10.55 2.625 9.875 3.3 9.875 4.125V7.875C9.875 8.7 10.55 9.375 11.375 9.375H12.875C13.7 9.375 14.375 8.7 14.375 7.875V4.125C14.375 3.3 13.7 2.625 12.875 2.625ZM8 11.625H14.375V13.125H7.9925C7.3325 13.125 6.7475 12.69 6.5525 12.0525L4.625 5.625V2.625H6.125V5.625L8 11.625ZM6.875 13.875H14.375V15.375H6.875V13.875Z" fill="#B61C1C"/>
                               </svg>
-                              <input type="text" placeholder="select class">
+                              <input type="text" class="under-side-bar-link1" placeholder="select class">
                         </div>
                     </div>
                 </section>
@@ -91,7 +91,7 @@
             <button class="flight-button">search flights</button>
         </section>
 
-        <section class="notification-section">
+        <!-- <section class="notification-section">
             <div>
                 <h1>continue your search</h1>
                 <a href="#">clear all</a>
@@ -117,13 +117,13 @@
                 </div>
                 <h3>nov 5</h3>
             </main>
-        </section>
+        </section> -->
 
         <!-- side bar that pop up from under -->
-         <section class="under-sideBar">
+        <section class="under-sideBar">
             <main class="main-under-sideBar">
                <div class="under-sideBar-first">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="cancle-under-sideBar" width="26" height="26" viewBox="0 0 26 26" fill="none">
                     <path d="M1 1L25 25M1 25L25 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
                   <h1>Passengers & Class</h1>
@@ -207,10 +207,10 @@
                     <h1>CABIN CLASS</h1>
 
                     <section>
-                        <h1>Economy</h1>
-                        <h1>Premium Economy</h1>
-                        <h1>Business class</h1>
-                        <h1>First class</h1>
+                        <h1 class="testing1">Economy</h1>
+                        <h1 class="testing2">Premium Economy</h1>
+                        <h1 class="testing3">Business class</h1>
+                        <h1 class="testing4">First class</h1>
                     </section>
                 </div>
             </main>
