--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                   
                 <div class="side-bar-second-section">
                     <!-- flight -->
-                    <span>
-                        <img src="image/sideBar/menu-active-flight-icon 1.png" alt=" flight icon">
-                        <p>flight</p>
-                    </span>
+                    <a id="flight-link" href="">
+                        <span>
+                            <img src="image/sideBar/menu-active-flight-icon 1.png" alt=" flight icon">
+                            <p>flight</p>
+                        </span>
+                    </a>
                     <!-- hotels -->
                     <span>
                         <img src="image/sideBar/menu-active-hotel 1.png" alt=" hotel icon">
