--- a/html/roundTrip.html
+++ b/html/roundTrip.html
@@ -27,15 +27,17 @@
         </section>
         <section class="flight-card-border">
                 <div class="flight-take-off">
-                    <label for="from">from</label>
-                    <div>
-                        <svg width="20" height="20" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g id="flight_takeoff">
-                            <path id="Vector" d="M1.89002 14.0364H16.14V15.5364H1.89002V14.0364ZM16.5675 7.01637C16.41 6.41637 15.7875 6.05637 15.1875 6.22137L11.205 7.28637L6.03002 2.46387L4.58252 2.84637L7.68752 8.22387L3.96002 9.22137L2.48252 8.06637L1.39502 8.35887L3.33752 11.7264L15.765 8.40387C16.3725 8.23137 16.725 7.61637 16.5675 7.01637Z" fill="#B61C1C"/>
-                            </g>
-                        </svg>
-                        <input type="text" placeholder="flying from">
-                    </div>
+                 <a id="search-link" href="#">
+                     <label for="from">from</label>
+                     <div>
+                         <svg width="20" height="20" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                             <g id="flight_takeoff">
+                             <path id="Vector" d="M1.89002 14.0364H16.14V15.5364H1.89002V14.0364ZM16.5675 7.01637C16.41 6.41637 15.7875 6.05637 15.1875 6.22137L11.205 7.28637L6.03002 2.46387L4.58252 2.84637L7.68752 8.22387L3.96002 9.22137L2.48252 8.06637L1.39502 8.35887L3.33752 11.7264L15.765 8.40387C16.3725 8.23137 16.725 7.61637 16.5675 7.01637Z" fill="#B61C1C"/>
+                             </g>
+                         </svg>
+                         <input type="text" placeholder="flying from">
+                     </div>
+                 </a>
                     <svg class="flight-swap-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                       </svg>
@@ -84,21 +86,21 @@
 
                 <section class="flight-div-grid">
                     <div class="flight-take-off">
-                        <label for="travelers">travelers</label>
-                        <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 18 18" fill="none">
+                        <label for="travelers" class="under-side-bar-link1">travelers</label>
+                        <div class="under-side-bar-link1">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="under-side-bar-link1" width="20" height="20" viewBox="0 0 18 18" fill="none">
                                 <path d="M9 9C10.6575 9 12 7.6575 12 6C12 4.3425 10.6575 3 9 3C7.3425 3 6 4.3425 6 6C6 7.6575 7.3425 9 9 9ZM9 10.5C6.9975 10.5 3 11.505 3 13.5V15H15V13.5C15 11.505 11.0025 10.5 9 10.5Z" fill="#B61C1C"/>
                               </svg>
-                              <input type="text" placeholder="passenger">
+                              <input type="text" class="under-side-bar-link1" placeholder="passenger">
                         </div>
                     </div>
                     <div class="flight-take-off">
-                        <label for="preferred class">preferred class</label>
+                        <label for="preferred class" class="under-side-bar-link1" >preferred class</label>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 19 18" fill="none">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="under-side-bar-link1" width="21" height="20" viewBox="0 0 19 18" fill="none">
                                 <path d="M12.875 2.625H11.375C10.55 2.625 9.875 3.3 9.875 4.125V7.875C9.875 8.7 10.55 9.375 11.375 9.375H12.875C13.7 9.375 14.375 8.7 14.375 7.875V4.125C14.375 3.3 13.7 2.625 12.875 2.625ZM8 11.625H14.375V13.125H7.9925C7.3325 13.125 6.7475 12.69 6.5525 12.0525L4.625 5.625V2.625H6.125V5.625L8 11.625ZM6.875 13.875H14.375V15.375H6.875V13.875Z" fill="#B61C1C"/>
                               </svg>
-                              <input type="text" placeholder="select class">
+                              <input type="text" class="under-side-bar-link1" placeholder="select class">
                         </div>
                     </div>
                 </section>
@@ -107,6 +109,7 @@
             <button class="flight-button">search flights</button>
         </section>
 
+       
         <!-- <section class="notification-section">
             <div>
                 <h1>continue your search</h1>
@@ -134,6 +137,103 @@
                 <h3>nov 5</h3>
             </main>
         </section> -->
+    
+        <!-- side bar that pop up from under -->
+        <section class="under-sideBar">
+            <main class="main-under-sideBar">
+               <div class="under-sideBar-first">
+                <svg xmlns="http://www.w3.org/2000/svg" class="cancle-under-sideBar" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                    <path d="M1 1L25 25M1 25L25 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <h1>Passengers & Class</h1>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20" viewBox="0 0 26 20" fill="none">
+                    <path d="M1 10.9167L8.38462 18.25L25 1.75" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+               </div>
+               <!-- break -->
+               <div class="sideBar-passengers">
+                 <h1>PASSENGERS</h1>
+                 <section>
+                     <main>
+                         <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="28" viewBox="0 0 24 28" fill="none">
+                                <path d="M12 0C8.6875 0 6 2.6875 6 6C6 9.3125 8.6875 12 12 12C15.3125 12 18 9.3125 18 6C18 2.6875 15.3125 0 12 0ZM9 14C4.01562 14 0 18.0156 0 23V24C0 26.2188 1.78125 28 4 28H20C22.2188 28 24 26.2188 24 24V23C24 18.0156 19.9844 14 15 14H9Z" fill="#2E3436"/>
+                              </svg>
+                            <span>
+                                <p>Adult</p>
+                                <small>&gt;12 years</small>
+                            </span>
+                         </div>
+                         <!-- break -->
+                         <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="28" viewBox="0 0 24 28" fill="none">
+                                <path d="M12 0C8.6875 0 6 2.6875 6 6C6 9.3125 8.6875 12 12 12C15.3125 12 18 9.3125 18 6C18 2.6875 15.3125 0 12 0ZM9 14C4.01562 14 0 18.0156 0 23V24C0 26.2188 1.78125 28 4 28H20C22.2188 28 24 26.2188 24 24V23C24 18.0156 19.9844 14 15 14H9Z" fill="#2E3436"/>
+                              </svg>
+                            <span>
+                                <p>Child</p>
+                                <small>2-12 years</small>
+                            </span>
+                         </div>
+                         <!-- break -->
+                         <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="28" viewBox="0 0 24 28" fill="none">
+                                <path d="M12 0C8.6875 0 6 2.6875 6 6C6 9.3125 8.6875 12 12 12C15.3125 12 18 9.3125 18 6C18 2.6875 15.3125 0 12 0ZM9 14C4.01562 14 0 18.0156 0 23V24C0 26.2188 1.78125 28 4 28H20C22.2188 28 24 26.2188 24 24V23C24 18.0156 19.9844 14 15 14H9Z" fill="#2E3436"/>
+                              </svg>
+                            <span>
+                                <p>Infant</p>
+                                <small> &lt;2 years </small>
+                            </span>
+                         </div>
+                     </main>
+                     <main>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                                <path d="M16.6 13H9.4M25 13C25 19.6274 19.6274 25 13 25C6.37258 25 1 19.6274 1 13C1 6.37258 6.37258 1 13 1C19.6274 1 25 6.37258 25 13Z" stroke="#B2B2B2" stroke-width="2" stroke-linecap="round"/>
+                              </svg>
+                              <p>0</p>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M12.8372 8.65116C12.8372 8.18879 12.4624 7.81395 12 7.81395C11.5376 7.81395 11.1628 8.18879 11.1628 8.65116V11.1628H8.65116C8.18879 11.1628 7.81395 11.5376 7.81395 12C7.81395 12.4624 8.18879 12.8372 8.65116 12.8372H11.1628V15.3488C11.1628 15.8112 11.5376 16.186 12 16.186C12.4624 16.186 12.8372 15.8112 12.8372 15.3488V12.8372H15.3488C15.8112 12.8372 16.186 12.4624 16.186 12C16.186 11.5376 15.8112 11.1628 15.3488 11.1628H12.8372V8.65116Z" fill="#131313"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37258 0 0 5.37258 0 12C0 18.6275 5.37258 24 12 24C18.6275 24 24 18.6275 24 12C24 5.37258 18.6275 0 12 0ZM1.67442 12C1.67442 6.29734 6.29734 1.67442 12 1.67442C17.7026 1.67442 22.3256 6.29734 22.3256 12C22.3256 17.7026 17.7026 22.3256 12 22.3256C6.29734 22.3256 1.67442 17.7026 1.67442 12Z" fill="#131313"/>
+                              </svg>
+                        </div>
+                        <!-- break -->
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                                <path d="M16.6 13H9.4M25 13C25 19.6274 19.6274 25 13 25C6.37258 25 1 19.6274 1 13C1 6.37258 6.37258 1 13 1C19.6274 1 25 6.37258 25 13Z" stroke="#B2B2B2" stroke-width="2" stroke-linecap="round"/>
+                              </svg>
+                              <p>0</p>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M12.8372 8.65116C12.8372 8.18879 12.4624 7.81395 12 7.81395C11.5376 7.81395 11.1628 8.18879 11.1628 8.65116V11.1628H8.65116C8.18879 11.1628 7.81395 11.5376 7.81395 12C7.81395 12.4624 8.18879 12.8372 8.65116 12.8372H11.1628V15.3488C11.1628 15.8112 11.5376 16.186 12 16.186C12.4624 16.186 12.8372 15.8112 12.8372 15.3488V12.8372H15.3488C15.8112 12.8372 16.186 12.4624 16.186 12C16.186 11.5376 15.8112 11.1628 15.3488 11.1628H12.8372V8.65116Z" fill="#131313"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37258 0 0 5.37258 0 12C0 18.6275 5.37258 24 12 24C18.6275 24 24 18.6275 24 12C24 5.37258 18.6275 0 12 0ZM1.67442 12C1.67442 6.29734 6.29734 1.67442 12 1.67442C17.7026 1.67442 22.3256 6.29734 22.3256 12C22.3256 17.7026 17.7026 22.3256 12 22.3256C6.29734 22.3256 1.67442 17.7026 1.67442 12Z" fill="#131313"/>
+                              </svg>
+                        </div>
+                        <!-- break -->
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                                <path d="M16.6 13H9.4M25 13C25 19.6274 19.6274 25 13 25C6.37258 25 1 19.6274 1 13C1 6.37258 6.37258 1 13 1C19.6274 1 25 6.37258 25 13Z" stroke="#B2B2B2" stroke-width="2" stroke-linecap="round"/>
+                              </svg>
+                              <p>0</p>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M12.8372 8.65116C12.8372 8.18879 12.4624 7.81395 12 7.81395C11.5376 7.81395 11.1628 8.18879 11.1628 8.65116V11.1628H8.65116C8.18879 11.1628 7.81395 11.5376 7.81395 12C7.81395 12.4624 8.18879 12.8372 8.65116 12.8372H11.1628V15.3488C11.1628 15.8112 11.5376 16.186 12 16.186C12.4624 16.186 12.8372 15.8112 12.8372 15.3488V12.8372H15.3488C15.8112 12.8372 16.186 12.4624 16.186 12C16.186 11.5376 15.8112 11.1628 15.3488 11.1628H12.8372V8.65116Z" fill="#131313"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37258 0 0 5.37258 0 12C0 18.6275 5.37258 24 12 24C18.6275 24 24 18.6275 24 12C24 5.37258 18.6275 0 12 0ZM1.67442 12C1.67442 6.29734 6.29734 1.67442 12 1.67442C17.7026 1.67442 22.3256 6.29734 22.3256 12C22.3256 17.7026 17.7026 22.3256 12 22.3256C6.29734 22.3256 1.67442 17.7026 1.67442 12Z" fill="#131313"/>
+                              </svg>
+                        </div>
+                     </main>
+                 </section>
+               </div>
+               <!-- break -->
+                <div class="cabin-class-section">
+                    <h1>CABIN CLASS</h1>
+
+                    <section>
+                        <h1 class="testing1">Economy</h1>
+                        <h1 class="testing2">Premium Economy</h1>
+                        <h1 class="testing3">Business class</h1>
+                        <h1 class="testing4">First class</h1>
+                    </section>
+                </div>
+            </main>
+         </section>
     </main>
 
     <script src="../script/routes.js"></script>
